Remove test stuff that shouldn't be there anyway; Bump minor version;

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "radient",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Gradient creation and manipulation library",
   "keywords": [
     "color",
@@ -12,15 +12,12 @@
   "authors": [
     "Jason Nedell <jason@nedell.com>"
   ],
+  "main": "index.js",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "http://github.com/sibicle/radient.git"
   },
-  "files": [
-    "LICENSE",
-    "index.js"
-  ],
   "dependencies": {
     "color": "^0.8.0"
   }
